# quadtree-project

./: CMakeLists.txt
output/: output.txt  output2.txt
program/: com  comp  program.c  test  test.c
